# ollama-native

./: Cargo.toml  LICENSE  README.md
examples/: chat_request_stream.rs  chat_with_history.rs  chat_with_images.rs  generate_completions.rs  generate_embeddings.rs  load_model_into_memory.rs  structured_outputs.rs
src/: config.rs  error.rs  lib.rs  ollama.rs
src/abi/: chat.rs  create_model.rs  generate.rs  mod.rs
src/abi/completion/: chat.rs  generate.rs  mod.rs
src/abi/model/: check_blob_exists.rs  copy.rs  create.rs  delete.rs  generate_embedding.rs  generate_embeddings.rs  list_local.rs  list_running.rs  mod.rs  pull.rs  push.rs  push_blob.rs  show_info.rs
src/abi/version/: version.rs
src/action/: mod.rs
src/action/completion/: chat.rs  generate.rs  mod.rs
src/action/model/: check_blob_exists.rs  copy.rs  create.rs  delete.rs  generate_embeddings.rs  list_local.rs  list_running.rs  pull.rs  push.rs  push_blob.rs  show_info.rs
src/action/version/: version.rs
src/client/: mod.rs  ollama.rs
src/client/completion/: chat.rs  generate.rs
src/client/embedding/: mod.rs
src/client/model/: check_blob_exists.rs  copy.rs  create.rs  delete.rs  generate_embedding.rs  generate_embeddings.rs  list_local.rs  list_running.rs  mod.rs  pull.rs  push.rs  push_blob.rs  show_info.rs
src/client/version/: version.rs
