[package]
name = "ollama-native"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { version = "0.1.86" }
bytes = { version = "1.10.0", features = ["serde"] }
futures = "0.3.31"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
async-stream = { version = "0.3.6" }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"], optional = true }

[features]
model = []
stream = ["tokio-stream", "reqwest/stream"]

[dev-dependencies]
ollama-native = { path = ".", features = ["stream", "model"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
